--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -11,7 +11,7 @@ excerpt: 个人简介。
 
 
 
-<center>## 个人基本信息 </center>
+## 一、基本信息 
 
 
    姓名：李博
@@ -21,38 +21,80 @@ excerpt: 个人简介。
    政治面貌：预备党员
    
    学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
+
    
-## 学习情况
+## 二、学习情况
+
 
    在本专业成绩排名一直在前10%。
 
    获得过国家励志奖学金、学校一等奖学金3次、二等奖学金2次。
    
    
-## 参加的比赛和项目
+## 三、参加的比赛和项目
+
    
-   ### 一、智能体感交互式多功能机器人
+   ### 1、智能体感交互式多功能机器人
    
    获奖情况：第七届安徽省“双百”大赛省二等奖
     
    项目涉及主要技术：机械手臂制作和控制、外骨骼制作、底盘履带车驱动、语音控制、视频监控、各类传感器（火焰传感器、可燃气体传感器等）。
    
-   
-   项目承担角色：实现蓝牙控制底盘履带车运动、视频监控、语音控制，辅助进行机械手臂动作设计和整体文档书写
-   
-   
-  
+   个人承担角色：主要负责技术实现。实现蓝牙控制底盘履带车运动、视频监控、语音控制，辅助进行机械手臂动作设计和整体文档书写
 
+
+   ### 2、智能家庭巡航助手
+
+   获奖情况：2016安徽省物联网应用创新大赛技能赛三等奖
+
+   项目涉及主要技术：小车控制、煤气报警、温湿度获取
+   
+   个人承担角色：团队负责人和技术实现。团队任务分配及实现蓝牙控制小车、煤气报警功能，负责文档及PPT制作，最后负责项目展示。
+
+   ### 3、基于物联网的亲子农场
+
+   获奖情况：初版获得2016安徽省物联网应用创新大赛技能赛一等奖，改进版已进入挑战杯安徽省省赛结果待定
+
+   项目涉及主要技术：机械结构设计、树莓派+单片机、数据库、前端界面、视频监控
+   
+   个人承担角色：团队技术实现。树莓派+单片机实现控制平台、jQuery+Android WebView实现前端控制、PHP+数据库实现数据存储处理、利用JavaScript实现数据可视化、视频监控。
+
+
+## 四、课余生活
+
+### 1、学生会生活
+    
+
+  大一加入院学生会外联部，参与过学院与其它学院一起举办“捐献物品慰问留守儿童”的活动，负责网络宣传和上班宣传，号召同学捐献物品，最终圆满完成任务。
+
+### 2、社团生活
+
+  大一加入大学生读书创作社策划部，参与过社团各个活动策划，全程参与社团核心活动“社刊征文活动”，面向全校学生征文，负责活动策划及上班宣传任务，同时负责活动颁奖晚会PPT制作及台控
+
+### 3、玩硬件和写作
+
+  喜欢玩一些硬件，玩过arduino和51单片机、自己动手刷过路由器操作系统openwrt、玩过树莓派、自己动手把不用的Android手机改造成服务器（[旧手机打造Web服务器](http://www.jianshu.com/p/934c3c35abc4)）；同时喜欢通过文字分享自己的所学所感，喜欢写一些关于单片机、关于编程和关于生活的的文章。一些文章发布在在下面这些平台：
+  简书ID：[IoTers](http://www.jianshu.com/users/e67611a6379b/)
+  个人知乎专栏：[玩转物联网硬件](https://zhuanlan.zhihu.com/ioters)
+
+
+## 五、总结
+
+   爱码代码 
+   
+   爱写文字 
+   
+   爱玩硬件
+   
+   推崇开源精神
+   
+   喜欢分享自己的所学所感 
+   
+   立志做一名物联网知识的分享者
    
 
----
-
-### 联系我
-
-* Email：[leebo106036@gmail.com](mailto:{{ site.email }})
-* 知乎：[xcldswz](https://www.zhihu.com/people/xcldswz)
-* 知乎专栏：[玩转物联网硬件](https://zhuanlan.zhihu.com/ioters)
-* 简书：[IoTers](http://www.jianshu.com/users/e67611a6379b/)
 
 
----
+
+
+
