--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -11,8 +11,8 @@ excerpt: 个人简介。
 
 
 
-## 一、基本信息 
-</br>
+### 一、基本信息 
+
 
 
    姓名：李博
@@ -24,7 +24,7 @@ excerpt: 个人简介。
    学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
 
    
-## 二、学习情况
+### 二、学习情况
 
 
 
@@ -33,11 +33,11 @@ excerpt: 个人简介。
    获得过国家励志奖学金、学校一等奖学金3次、二等奖学金2次。
    
    
-## 三、参加的比赛和项目
+### 三、参加的比赛和项目
 
 
    
-### 1、智能体感交互式多功能机器人
+#### 1、智能体感交互式多功能机器人
 
    
    获奖情况：第七届安徽省“双百”大赛省二等奖
