--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -15,13 +15,13 @@ excerpt: 个人简介。
 
 <br/>
 
-   姓名：李博
+ &ensp 姓名：李博
    
-   年龄：23
+ &ensp 年龄：23
    
-   政治面貌：预备党员
+ &ensp 政治面貌：预备党员
    
-   学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
+ &ensp 学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
 <br/>
    
 ### 二、学习情况
@@ -39,11 +39,11 @@ excerpt: 个人简介。
 
 #### 1、智能体感交互式多功能机器人
 
-    获奖情况：第七届安徽省“双百”大赛省二等奖
+   获奖情况：第七届安徽省“双百”大赛省二等奖
     
-    项目涉及主要技术：机械手臂制作和控制、外骨骼制作、底盘履带车驱动、语音控制、视频监控、各类传感器（火焰传感器、可燃气体传感器等）。
+   项目涉及主要技术：机械手臂制作和控制、外骨骼制作、底盘履带车驱动、语音控制、视频监控、各类传感器（火焰传感器、可燃气体传感器等）。
    
-   个人承担角色：主要负责技术实现。实现蓝牙控制底盘履带车运动、视频监控、语音控制，辅助进行机械手臂动作设计和整体文档书写
+   个人承担角色：主要负责技术实现。实现蓝牙控制底盘履带车运动、视频监控、语音控制，辅助进行机械手臂动作设计和整体文档书写
 
 <br/>
 
