--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -15,13 +15,13 @@ excerpt: 个人简介。
 
 <br/>
 
- &ensp 姓名：李博
+ &nbsp 姓名：李博
    
- &ensp 年龄：23
+ &nbsp 年龄：23
    
- &ensp 政治面貌：预备党员
+  政治面貌：预备党员
    
- &ensp 学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
+  学校：毕业于寿县一中，现就读于铜陵学院数学与计算机学院
 <br/>
    
 ### 二、学习情况
