--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -104,9 +104,11 @@ excerpt: 个人简介。
    
    推崇开源精神
    
-   喜欢分享自己的所学所感 
+   爱与他人分享
+  
+   希望把每天都过得有意义  
    
-   立志做一名物联网知识的分享者
+   努力做一名物联网知识的分享者
    
 
 
