--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -42,6 +42,8 @@ excerpt: 个人简介。
    获奖情况：第七届安徽省“双百”大赛省二等奖
     
    项目涉及主要技术：机械手臂制作和控制、外骨骼制作、底盘履带车驱动、语音控制、视频监控、各类传感器（火焰传感器、可燃气体传感器等）。
+
+   技术栈：单片机、语音模块、舵机控制模块、蓝牙模块等。
    
    个人承担角色：主要负责技术实现。实现蓝牙控制底盘履带车运动、视频监控、语音控制，辅助进行机械手臂动作设计和整体文档书写
 
@@ -53,7 +55,9 @@ excerpt: 个人简介。
 
    项目涉及主要技术：小车控制、煤气报警、温湿度获取
 
-   个人承担角色：团队负责人和技术实现。团队任务分配及实现蓝牙控制小车、煤气报警功能，负责文档及PPT制作，最后负责项目展示。
+   技术栈：单片机控制、蓝牙模块、传感器等
+
+   个人承担角色：团队负责人和技术实现。团队任务分配及实现蓝牙控制小车、煤气报警功能，辅助文档及PPT制作，最后负责项目展示。
 
 <br/>
 
@@ -63,9 +67,17 @@ excerpt: 个人简介。
 
    项目涉及主要技术：机械结构设计、树莓派+单片机、数据库、前端界面、视频监控
 
-   个人承担角色：团队技术实现。树莓派+单片机实现控制平台、jQuery+Android WebView实现前端控制、PHP+数据库实现数据存储处理、利用JavaScript实现数据可视化、视频监控。
+   技术栈：树莓派控制、单片机、Python、PHP、MySQL、jQuery、Json、JavaScript等
+
+   个人承担角色：团队技术实现。树莓派+单片机实现远程控制、jQuery+Android WebView实现前端控制、PHP+数据库实现数据存储处理、利用JavaScript实现数据可视化、路由器操作实现视频监控
 
 <br/>
+
+#### 4、其它
+
+   写过一个用于病历管理的APP“健康档案”，后台使用PHP+MySQL，前端使用Android；
+   获得铜陵学院第十四届网页设计大赛二等奖；
+   博学思益规划未来演讲比赛一等奖。
 
 
 ### 四、课余生活
@@ -84,15 +96,35 @@ excerpt: 个人简介。
 
 #### 3、玩硬件和写作
 
-   喜欢玩一些硬件，玩过arduino和51单片机、自己动手刷过路由器操作系统openwrt、玩过树莓派、自己动手把不用的Android手机改造成服务器（[旧手机打造Web服务器](http://www.jianshu.com/p/934c3c35abc4)）；同时喜欢通过文字分享自己的所学所感，喜欢写一些关于单片机、关于编程和关于生活的的文章。一些文章发布在在下面这些平台：
+   喜欢玩一些硬件，玩过arduino和51单片机、自己动手给路由器刷上Openwrt系统并在路由器上搭建Web服务器、玩过树莓派、自己动手把不用的Android手机改造成服务器（[旧手机打造Web服务器](http://www.jianshu.com/p/934c3c35abc4)）；同时喜欢通过文字分享自己的所学所感，喜欢写一些关于单片机、关于编程和关于生活的的文章。
+   常用ID是xcldswz（乡村里的守望者），一些文章发布在在下面这些平台：
 
   简书ID：[xcldswz](http://www.jianshu.com/users/e67611a6379b/)
   
   个人知乎专栏：[玩转物联网硬件](https://zhuanlan.zhihu.com/ioters)
 
+#### 4、下象棋和阅读
+  小学二年级就开始学下象棋，童年的很多乐趣都源自下象棋。在那个没有智能手机年代，每到黄昏就摆上棋局开始厮杀，旁边人则开始指点江山，由于学棋较早所以同龄人一直鲜逢对手，多与大人们下,曾经写过一篇文章 [棋者无疆](http://www.jianshu.com/p/8632d2a67b53)记录关于下棋的点点滴滴。
+  >佛曰一沙一世界，一叶一菩提。其实一盘棋局也是一段人生，记得刚学会象棋时我喜欢用炮和車，横冲直撞，所顾忌，尽显年少癫狂；后来渐渐喜欢用马，行踪不定，镇守八方；如今没有刻意去用哪一个，我印象最深刻的是曾经遇到一位高手，用六个“卒”杀的我丢盔卸甲，所以每一颗棋子都有自己的角色，我所做的就是努力让它们扮演好自己的角色。
+
+   阅读也是从小开始，会因为喜欢一个句子找到整篇文章甚至这本书读，会因为喜欢某篇文章就买下整本书。小学读的关于历史的书籍比较多，像《儒林外史》、《东周列国》等等，四大名著除了《红楼梦》都读了一遍；初中高中读的散文小说比较多，喜欢路遥的朴素隽永（《平凡的世界》、《人生》等），钱钟书的博学睿智（《围城》）、张爱玲的华丽苍凉（《倾城之恋》、《红玫瑰与白玫瑰》等），余秋雨的通俗典雅（《文化苦旅》、《山居笔记》等）……
+
+   如今除了读像《在路上》（杰克·凯鲁亚克）、《艾伦·图灵传》（安德鲁·霍奇斯 ）、
+   《乔布斯传》（丹尼尔·伊克比亚 ）《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）中的“一万小时定理”、《断点：互联网进化启示录》一个脑科学家眼里的互联网、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）我的第一本关于人工智能书……
+
+<br/>
+   
+### 五、项目演示
+
+请点击：[Project}(http://xcldswz.xyz/idea/)
+
+包含项目图片和视频，点击图片即可观看视频或跳转到目标页。
+
+
+
 <br/>
 
-### 五、总结
+### 六、总结
 
 <br/>
 
@@ -109,10 +141,4 @@ excerpt: 个人简介。
    希望把每天都过得有意义  
    
    努力做一名物联网知识的分享者
-   
-
-
-
-
-
 
