--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -76,15 +76,21 @@ excerpt: 个人简介。
 #### 4、其它
 
    写过一个用于病历管理的APP“健康档案”，后台使用PHP+MySQL，前端使用Android；
+
    获得铜陵学院第十四届网页设计大赛二等奖；
+
    博学思益规划未来演讲比赛一等奖。
+
+   2015首届铜陵学院“互联网+”大学生创新创业大赛或一等奖，主持《互联网+农产品交易》项目。
+
+   全国计算机等级考试二级Java、C、office证书。
 
 
 ### 四、课余生活
 <br/>
 #### 1、学生会生活
 
-   大一加入院学生会外联部，参与过学院与其它学院一起举办“捐献物品慰问留守儿童”的活动，负责网络宣传和上班宣传，号召同学捐献物品，最终圆满完成任务。
+   大一加入院学生会外联部，参与过学院与其它学院一起举办“关爱留守儿童”的募捐活动，负责网络宣传和上班宣传，号召同学捐献物品，最终圆满完成任务。
 
 <br/>
 
@@ -96,7 +102,7 @@ excerpt: 个人简介。
 
 #### 3、玩硬件和写作
 
-   喜欢玩一些硬件，玩过arduino和51单片机、自己动手给路由器刷上Openwrt系统并在路由器上搭建Web服务器、玩过树莓派、自己动手把不用的Android手机改造成服务器（[旧手机打造Web服务器](http://www.jianshu.com/p/934c3c35abc4)）；同时喜欢通过文字分享自己的所学所感，喜欢写一些关于单片机、关于编程和关于生活的的文章。
+   喜欢玩一些硬件，玩过arduino和51单片机([DIY智能温湿度计](http://www.jianshu.com/p/9fc34299eb82))、自己动手给路由器刷上Openwrt系统并在路由器上搭建Web服务器、玩过树莓派、自己动手把不用的Android手机改造成服务器（[旧手机打造Web服务器](http://www.jianshu.com/p/934c3c35abc4)）；同时喜欢通过文字分享自己的所学所感，喜欢写一些关于单片机、关于编程和关于生活的的文章。
    常用ID是xcldswz（乡村里的守望者），一些文章发布在在下面这些平台：
 
   简书ID：[xcldswz](http://www.jianshu.com/users/e67611a6379b/)
@@ -104,6 +110,7 @@ excerpt: 个人简介。
   个人知乎专栏：[玩转物联网硬件](https://zhuanlan.zhihu.com/ioters)
 
 #### 4、下象棋和阅读
+
   小学二年级就开始学下象棋，童年的很多乐趣都源自下象棋。在那个没有智能手机年代，每到黄昏就摆上棋局开始厮杀，旁边人则开始指点江山，由于学棋较早所以同龄人一直鲜逢对手，多与大人们下,曾经写过一篇文章 [棋者无疆](http://www.jianshu.com/p/8632d2a67b53)记录关于下棋的点点滴滴。
   >佛曰一沙一世界，一叶一菩提。其实一盘棋局也是一段人生，记得刚学会象棋时我喜欢用炮和車，横冲直撞，所顾忌，尽显年少癫狂；后来渐渐喜欢用马，行踪不定，镇守八方；如今没有刻意去用哪一个，我印象最深刻的是曾经遇到一位高手，用六个“卒”杀的我丢盔卸甲，所以每一颗棋子都有自己的角色，我所做的就是努力让它们扮演好自己的角色。
 
@@ -116,7 +123,7 @@ excerpt: 个人简介。
    
 ### 五、项目演示
 
-请点击：[Project}(http://xcldswz.xyz/idea/)
+请点击：[Project](http://xcldswz.xyz/idea/)
 
 包含项目图片和视频，点击图片即可观看视频或跳转到目标页。
 
