--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -85,8 +85,17 @@ excerpt: 个人简介。
 
    全国计算机等级考试二级Java、C、office证书。
 
+<br/>
+   
+### 四、项目演示
 
-### 四、课余生活
+请点击：[Project](http://xcldswz.xyz/idea/)
+
+包含项目图片和视频，点击图片即可观看视频或跳转到目标页。
+
+<br/>
+
+### 五、课余生活
 <br/>
 #### 1、学生会生活
 
@@ -118,15 +127,6 @@ excerpt: 个人简介。
 
    如今除了读像《在路上》（杰克·凯鲁亚克）、《艾伦·图灵传》（安德鲁·霍奇斯 ）、
    《乔布斯传》（丹尼尔·伊克比亚 ）《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）中的“一万小时定理”、《断点：互联网进化启示录》一个脑科学家眼里的互联网、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）我的第一本关于人工智能书……
-
-<br/>
-   
-### 五、项目演示
-
-请点击：[Project](http://xcldswz.xyz/idea/)
-
-包含项目图片和视频，点击图片即可观看视频或跳转到目标页。
-
 
 
 <br/>
