--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -30,7 +30,7 @@ excerpt: 个人简介。
 
    在本专业成绩排名一直在前10%。
 
-   获得过国家励志奖学金、学校一等奖学金3次、二等奖学金2次。
+  本科学习到目前为止5个学期内获得过国家励志奖学金、学校一等奖学金3次、二等奖学金2次。
 
 <br/> 
    
@@ -117,7 +117,7 @@ excerpt: 个人简介。
   简书ID：[xcldswz](http://www.jianshu.com/users/e67611a6379b/)
   
   个人知乎专栏：[玩转物联网硬件](https://zhuanlan.zhihu.com/ioters)
-  
+
 <br/>
 
 #### 4、下象棋和阅读
