--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -125,10 +125,10 @@ excerpt: 个人简介。
   小学二年级就开始学下象棋，童年的很多乐趣都源自下象棋。在那个没有智能手机年代，每到黄昏就摆上棋局开始厮杀，旁边人则开始指点江山，由于学棋较早所以同龄人一直鲜逢对手，多与大人们下,曾经写过一篇文章 [棋者无疆](http://www.jianshu.com/p/8632d2a67b53)记录关于下棋的点点滴滴。
   >佛曰一沙一世界，一叶一菩提。其实一盘棋局也是一段人生，记得刚学会象棋时我喜欢用炮和車，横冲直撞，所顾忌，尽显年少癫狂；后来渐渐喜欢用马，行踪不定，镇守八方；如今没有刻意去用哪一个，我印象最深刻的是曾经遇到一位高手，用六个“卒”杀的我丢盔卸甲，所以每一颗棋子都有自己的角色，我所做的就是努力让它们扮演好自己的角色。
 
-   阅读也是从小开始，会因为喜欢一个句子找到整篇文章甚至这本书读，会因为喜欢某篇文章就买下整本书。小学读的关于历史的书籍比较多，像《儒林外史》、《东周列国》等等，四大名著除了《红楼梦》都读了一遍；初中高中读的散文小说比较多，喜欢路遥的朴素隽永（《平凡的世界》、《人生》等），钱钟书的博学睿智（《围城》）、张爱玲的华丽苍凉（《倾城之恋》、《红玫瑰与白玫瑰》等），余秋雨的通俗典雅（《文化苦旅》、《山居笔记》等）……
+   阅读也是从小开始，会因为喜欢一个句子找到整篇文章甚至这本书读，会因为喜欢某篇文章就买下整本书。小学读的关于历史的书籍比较多，像《儒林外史》、《东周列国》等等，四大名著除了《红楼梦》都读了一遍；初中高中读的散文小说比较多，喜欢路遥的朴素隽永（《平凡的世界》、《人生》等），钱钟书的博学睿智（《围城》）、张爱玲的华丽苍凉（《倾城之恋》、《红玫瑰与白玫瑰》等）、余秋雨的通俗典雅（《文化苦旅》、《山居笔记》等）……
 
    如今除了读像《在路上》（杰克·凯鲁亚克）、《艾伦·图灵传》（安德鲁·霍奇斯 ）、
-   《乔布斯传》（丹尼尔·伊克比亚 ）《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）中的“一万小时定理”、《断点：互联网进化启示录》一个脑科学家眼里的互联网、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）我的第一本关于人工智能书……
+   《乔布斯传》（丹尼尔·伊克比亚 ）、《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）中的“一万小时定理”、《断点：互联网进化启示录》一个脑科学家眼里的互联网、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）我的第一本关于人工智能书……
 
 
 <br/>
