--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -128,7 +128,7 @@ excerpt: 个人简介。
    阅读也是从小开始，会因为喜欢一个句子找到整篇文章甚至这本书读，会因为喜欢某篇文章就买下整本书。小学读的关于历史的书籍比较多，像《儒林外史》、《东周列国》等等，四大名著除了《红楼梦》都读了一遍；初中高中读的散文小说比较多，喜欢路遥的朴素隽永（《平凡的世界》、《人生》等），钱钟书的博学睿智（《围城》）、张爱玲的华丽苍凉（《倾城之恋》、《红玫瑰与白玫瑰》等）、余秋雨的通俗典雅（《文化苦旅》、《山居笔记》等）……
 
    如今除了读像《在路上》（杰克·凯鲁亚克）、《艾伦·图灵传》（安德鲁·霍奇斯 ）、
-   《乔布斯传》（丹尼尔·伊克比亚 ）、《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）中的“一万小时定理”、《断点：互联网进化启示录》一个脑科学家眼里的互联网、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）我的第一本关于人工智能书……
+   《乔布斯传》（丹尼尔·伊克比亚 ）、《美学散步》（宗白华）等文学作品，还会读一些专业书籍，《异类》（马尔科姆·格拉德威尔）、《断点：互联网进化启示录》、《人工智能狂潮:机器人会超越人类吗?》（松尾丰著）……
 
 
 <br/>
