--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -63,7 +63,7 @@ excerpt: 个人简介。
 
 #### 3、基于物联网的亲子农场
 
-   获奖情况：初版获得2016安徽省物联网应用创新大赛技能赛一等奖，改进版已进入挑战杯安徽省省赛结果待定
+   获奖情况：初版获得2016安徽省物联网应用创新大赛技能赛一等奖，安徽省挑战杯二等奖
 
    项目涉及主要技术：机械结构设计、树莓派+单片机、数据库、前端界面、视频监控
 
