--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -81,7 +81,7 @@ excerpt: 个人简介。
 
    博学思益规划未来演讲比赛一等奖。
 
-   2015首届铜陵学院“互联网+”大学生创新创业大赛或一等奖，主持《互联网+农产品交易》项目。
+   2015首届铜陵学院“互联网+”大学生创新创业大赛获一等奖，主持《互联网+农产品交易》项目。
 
    全国计算机等级考试二级Java、C、office证书。
 
