--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -17,6 +17,8 @@ excerpt: 个人简介。
 
    姓名：李博
    
+   ![pr.jpg](http://upload-images.jianshu.io/upload_images/3845101-3a9f9f877adcd23d.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+   
    年龄：23
    
    政治面貌：预备党员
