--- a/_posts/2017-05-11-Profile.md
+++ b/_posts/2017-05-11-Profile.md
@@ -13,11 +13,13 @@ excerpt: 个人简介。
 
 ### 一、基本信息
 
+![pr.PNG](http://upload-images.jianshu.io/upload_images/3845101-e37058f8a10f2e41.PNG?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 <br/>
 
    姓名：李博
    
-   ![pr.jpg](http://upload-images.jianshu.io/upload_images/3845101-3a9f9f877adcd23d.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
    
    年龄：23
    
